配置Windows编译环境以及CMakeList，修改文件读取路径，完善部分库引用，修改Windows下boost库的支持到1.90.0

--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,9 @@ asan-symbolize
 # Valgrind 日志
 vgcore.*
 valgrind-*.log
+# 自定义日志
+logs/
+*.log
 
 # ========================== 其他无关文件 ==========================
 # 自定义的配置文件（若有本地配置，可添加此处）
