--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,31 @@
 cmake_minimum_required(VERSION 3.15)
-project(AsioServer)
+project(AsioServer LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(BOOST_ROOT "/opt/homebrew/opt/boost@1.85")
-set(BOOST_INCLUDE_DIR "${BOOST_ROOT}/include")
-set(BOOST_LIB_DIR "${BOOST_ROOT}/lib")
+if(WIN32)
+    # MSYS2 + MinGW64
+    cmake_policy(SET CMP0167 NEW)
 
-set(MYSQL_ROOT "/opt/homebrew/opt/mysql@8.0")
-set(MYSQL_INCLUDE_DIR "${MYSQL_ROOT}/include")
-set(MYSQL_LIB_DIR "${MYSQL_ROOT}/lib")
+    find_package(Boost CONFIG REQUIRED COMPONENTS system thread)
+    find_package(SQLite3 REQUIRED)
+    find_package(PkgConfig REQUIRED)
+    pkg_check_modules(MARIADB REQUIRED libmariadb)
+else()
+    # MacOS 配置
+    set(BOOST_ROOT "/opt/homebrew/opt/boost@1.85")
+    set(BOOST_INCLUDE_DIR "${BOOST_ROOT}/include")
+    set(BOOST_LIB_DIR "${BOOST_ROOT}/lib")
 
-set(SQLITE3_ROOT "/opt/homebrew/opt/sqlite")
-set(SQLITE3_INCLUDE_DIR "${SQLITE3_ROOT}/include")
-set(SQLITE3_LIB_DIR "${SQLITE3_ROOT}/lib")
+    set(MYSQL_ROOT "/opt/homebrew/opt/mysql@8.0")
+    set(MYSQL_INCLUDE_DIR "${MYSQL_ROOT}/include")
+    set(MYSQL_LIB_DIR "${MYSQL_ROOT}/lib")
+
+    set(SQLITE3_ROOT "/opt/homebrew/opt/sqlite")
+    set(SQLITE3_INCLUDE_DIR "${SQLITE3_ROOT}/include")
+    set(SQLITE3_LIB_DIR "${SQLITE3_ROOT}/lib")
+endif()
 
 # 添加源文件
 add_executable(${PROJECT_NAME}
@@ -28,6 +40,7 @@ add_executable(${PROJECT_NAME}
     ./core/session/CSession.cpp
 
     ./infra/log/Logger.cpp
+    ./infra/util/PathUtils.cpp
 
     ./net/threaded/AsyncSession.cpp
     ./net/coroutine/CoroutineSession.cpp
@@ -51,35 +64,75 @@ target_include_directories(${PROJECT_NAME} PRIVATE
     ${MYSQL_INCLUDE_DIR}
     ${SQLITE3_INCLUDE_DIR}
 
-    /config
+    ${CMAKE_SOURCE_DIR}
 
-    /core/common
-    /core/logic
-    /core/message
-    /core/protocol
-    /core/server
-    /core/session
+    ${CMAKE_SOURCE_DIR}/config
+    ${CMAKE_SOURCE_DIR}/core/common
+    ${CMAKE_SOURCE_DIR}/core/logic
+    ${CMAKE_SOURCE_DIR}/core/message
+    ${CMAKE_SOURCE_DIR}/core/protocol
+    ${CMAKE_SOURCE_DIR}/core/server
+    ${CMAKE_SOURCE_DIR}/core/session
 
-    /infra/util
-    /infra/log
+    ${CMAKE_SOURCE_DIR}/infra/util
+    ${CMAKE_SOURCE_DIR}/infra/log
 
-    /services
-    /services/HelloService
-    /services/DBService
-
+    ${CMAKE_SOURCE_DIR}/services
+    ${CMAKE_SOURCE_DIR}/services/HelloService
+    ${CMAKE_SOURCE_DIR}/services/DBService
 )
 
-# 添加库目录并链接库文件
-target_link_directories(${PROJECT_NAME} PRIVATE
-    ${BOOST_LIB_DIR}
-    ${MYSQL_LIB_DIR}
-    ${SQLITE3_LIB_DIR}
-)
+if(WIN32)
+    target_include_directories(${PROJECT_NAME} PRIVATE
+        ${MARIADB_INCLUDE_DIRS}
+    )
+else()
+    target_include_directories(${PROJECT_NAME} PRIVATE
+        ${BOOST_INCLUDE_DIR}
+        ${MYSQL_INCLUDE_DIR}
+        ${SQLITE3_INCLUDE_DIR}
+    )
+endif()
 
-target_link_libraries(${PROJECT_NAME} PRIVATE
-    boost_system                   # 直接链接具体的库文件
-    mysqlclient
-    sqlite3
-)
+if(WIN32)
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+    # target_link_libraries(${PROJECT_NAME} PRIVATE
+    #     boost_system
+    #     boost_thread
+    #     mysqlclient       # 或 libmariadb
+    #     sqlite3
+    #     ws2_32
+    #     mswsock           # 必须加
+    #     bcrypt            # 推荐
+    # )
+
+    target_link_libraries(${PROJECT_NAME} PRIVATE
+        mariadb
+        sqlite3
+        ws2_32
+        mswsock
+        bcrypt
+    )
+
+else()
+
+    target_link_directories(${PROJECT_NAME} PRIVATE
+        ${BOOST_LIB_DIR}
+        ${MYSQL_LIB_DIR}
+        ${SQLITE3_LIB_DIR}
+    )
+
+    target_link_libraries(${PROJECT_NAME} PRIVATE
+        boost_system
+        mysqlclient
+        sqlite3
+    )
+
+endif()
+
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
+# Windows下Debug/Release分开输出（可选，方便管理）
+if(WIN32)
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/bin/Debug")
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/bin/Release")
+endif()
